<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_preview"
        android:title="@string/preview"
        android:icon="@android:drawable/ic_menu_view"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_export"
        android:title="@string/export"
        android:icon="@android:drawable/ic_menu_share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_ai_review"
        android:title="@string/ai_review"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_duplicate"
        android:title="Duplicate"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete"
        android:title="@string/delete"
        app:showAsAction="never" />

</menu>
